@@ -35,7 +35,7 @@ job_user VARCHAR( 255 ) NOT NULL ,
 project VARCHAR( 255 ) NOT NULL ,
 job_group VARCHAR( 255 ) NOT NULL ,
 command TEXT ,
-exit_code INT NOT NULL DEFAULT '0' ,
+exit_code INT DEFAULT NULL ,
 queue_name VARCHAR( 100 ) NOT NULL ,
 properties TEXT ,
 launching_directory TEXT NOT NULL ,
