@@ -214,7 +214,7 @@ while (($job_index <= $#jobs) and ((time() - $initial_time) < $timeout)){
                 $skip_job = 1;
                 next;
             }
-        }elsif ($dep_job->{exit_code} != 0){
+        }elsif (($dep_job->{job_type} eq "PASSIVE") and ($dep_job->{exit_code} != 0)){
             my $message = "Cannot determine scheduling time due to dependency with the job $d (exit code != 0)";
             iolib::set_job_message($base,$j->{job_id},$message);
             oar_debug("[oar_sched_gantt_with_timesharing_and_fairsharing] [$j->{job_id}] $message\n");
